<resources>
    <string name="app_name">Contacts</string>
    <string name="default_text">No Contacts Yet.. Press button to add</string>
    <string name="entername_ca">Enter name</string>
    <string name="enterPhone_CA">Enter Phone</string>
    <string name="call_his">Call history</string>
    <string name="settings">Settings</string>
    <string name="help"><![CDATA[Help & Feedback]]></string>
    <string name="spam">Mark Spam</string>
    <string name="share">Share</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="block_contact">Block Contact</string>
    <string name="send">send text message</string>
    <string name="deleteFor">delete forever</string>
    <string name="blk_ins">block instead</string>
    <string name="name_">Name</string>
    <string name="phone__">Phone</string>
    <string name="call_">Call</string>
    <string name="text_">Text</string>
    <string name="vid">Video</string>
    <string name="delete">Delete</string>
    <string name="contact_details">Contact Details</string>
    <string name="ok_tv">OK</string>
    <string name="areusure">Are u sure ?</string>
    <string name="proceed">Proceed</string>
    <string name="cancel">Cancel</string>

    <style name="entername_ca">Enter name..</style>
    <style name="enterphone_ca">Enter Phone..</style>

</resources>